@@ -4,6 +4,7 @@ x.y.z
 New features:
 
 * Fix GitHub Issue #140: Double-click to create a new node
+* Add setting to select node group by intersection
 
 Bug fixes:
 
